Fix contrast issues

--- a/css/style.css
+++ b/css/style.css
@@ -45,7 +45,7 @@ code {
 }
 
 .highlight .kn {
-    color: #ac8a8a;
+    color: #90ffb6;
     font-weight: bold;
 }
 
